# tp-3-edie_i_aleksander

./: CMakeLists.txt
python test/: idft_test.py  plot_test.py
src/: CMakeLists.txt  main.cpp  naglowek.h
